# action-pin-guard

./: CHANGELOG.md  CLEAN_ROOM_BRIEF.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-ja.md  README-jp.md  README-zh.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/action_pin_guard/: __init__.py  __main__.py  cli.py  config.py  scanner.py
tests/: test_check_cli.py
