[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "action-pin-guard"
version = "0.1.0"
description = "A local GitHub Actions uses: reference pinning checker."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "action-pin-guard contributors" }
]
dependencies = [
  "PyYAML>=6.0"
]
keywords = ["github-actions", "security", "supply-chain", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "PyYAML",
  "ruff",
]

[project.scripts]
action-pin-guard = "action_pin_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
